--- a/pogoda/View/MainWindow.xaml
+++ b/pogoda/View/MainWindow.xaml
@@ -5,8 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pogoda"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="430" Width="800" MinHeight="168" MinWidth="216" WindowStyle="None">
     <Grid>
-        <TextBlock x:Name="Text" Text="Test text" FontSize="24px" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="297*"></ColumnDefinition>
+            <ColumnDefinition Width="206"></ColumnDefinition>
+            <ColumnDefinition Width="219*"></ColumnDefinition>
+            <ColumnDefinition Width="26*"></ColumnDefinition>
+            <ColumnDefinition Width="26*"></ColumnDefinition>
+            <ColumnDefinition Width="26*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25"></RowDefinition>
+            <RowDefinition Height="121*"></RowDefinition>
+            <RowDefinition Height="158"></RowDefinition>
+            <RowDefinition Height="121*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Border Grid.Row="2" Grid.Column="1" Background="LightCoral" Padding="10" Panel.ZIndex="0"></Border>
+        <TextBlock Grid.Column="1" Grid.Row="2" Margin="0,0,0,106" Background="#B2F0F8FF"></TextBlock>
+        <Line Grid.Row="2" Grid.Column="1" Margin="17, 55, 16.5, 102" Stroke="Black" X1="0" X2="176" Panel.ZIndex="1"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Background="#B2F0F8FF" Margin="17, 67, 15, 66" TextChanged="TextBox_TextChanged"></TextBox>
+        <Button Grid.Column="1" Grid.Row="2" Margin="17, 116, 17, 15"></Button>
     </Grid>
 </Window>
