--- a/pogoda/View/SecondWindow.xaml
+++ b/pogoda/View/SecondWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pogoda.View"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="SecondWindow" Height="850" Width="1500" WindowStyle="None">
+        Title="SecondWindow" Height="850" Width="1500" WindowStyle="SingleBorderWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="438"></ColumnDefinition>
@@ -41,5 +42,13 @@
         <TextBlock Text="16:00" Grid.RowSpan="4" Margin="11,341,343,0"></TextBlock>
         <TextBlock Text="17:00" Grid.RowSpan="4" Margin="11,492,343,0"></TextBlock>
         <TextBlock Text="18:00" Grid.RowSpan="4" Margin="11,649,343,0"></TextBlock>
+        <lvc:CartesianChart x:Name="Diagram" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="5" Series="{Binding SeriesCollection}">
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Часов" Labels="{Binding Labels}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Градусов" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+        </lvc:CartesianChart>
     </Grid>
 </Window>
