--- a/pogoda/View/SecondWindow.xaml
+++ b/pogoda/View/SecondWindow.xaml
@@ -29,14 +29,14 @@
         <TextBlock Text="Выбранный город" Grid.Row="1"></TextBlock>
         <Button Content="Погода" Grid.Row="1" Grid.Column="1"></Button>
         <Frame Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="8"></Frame>
-        <Image Grid.RowSpan="4" Margin="64,126,251,585" Width="123" Height="123" Panel.ZIndex="1">
+        <Image Grid.RowSpan="4" Margin="64,126,251,0" Width="123" Height="123" Panel.ZIndex="1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Image.Source>
                 <BitmapImage UriSource="/Images/Sunny.png"></BitmapImage>
             </Image.Source>
         </Image>
-        <Image Source="/Images/Sunny.png" Grid.RowSpan="4" Margin="95,341,283,433" Width="60" Height="60" Panel.ZIndex="1"></Image>
-        <Image Source="/Images/Cloudy.png" Grid.RowSpan="4" Width="60" Height="60" Margin="95,502,283,272" Panel.ZIndex="1"></Image>
-        <Image Source="/Images/Rainy.png" Grid.RowSpan="4" Width="60" Height="60" Margin="95,657,283,133" Panel.ZIndex="1"></Image>
+        <Image Source="/Images/Sunny.png" Grid.RowSpan="4" Margin="95,341,283,0" Width="60" Height="60" Panel.ZIndex="1" HorizontalAlignment="Left" VerticalAlignment="Top"></Image>
+        <Image Source="/Images/Cloudy.png" Grid.RowSpan="4" Width="60" Height="60" Margin="95,502,283,0" Panel.ZIndex="1" HorizontalAlignment="Left" VerticalAlignment="Top"></Image>
+        <Image Source="/Images/Rainy.png" Grid.RowSpan="4" Width="60" Height="60" Margin="95,657,283,0" Panel.ZIndex="1" HorizontalAlignment="Left" VerticalAlignment="Top"></Image>
         <Line Grid.RowSpan="4" Y1="187.5" Y2="807.5" Stroke="Black" Margin="125,0,312,0"></Line>
         <TextBlock Text="Ясно. 21°&#xA;Ощущается как 25°" Grid.RowSpan="4" Margin="194,121,32,0"></TextBlock>
         <TextBlock Text="Ясно. 21°&#xA;Ощущается как 25°" Grid.RowSpan="4" Margin="167,341,47,0"></TextBlock>
