--- a/pogoda/View/SecondWindow.xaml
+++ b/pogoda/View/SecondWindow.xaml
@@ -8,38 +8,107 @@
         Title="SecondWindow" Height="850" Width="1500" WindowStyle="None">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="438"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="0.70*"></ColumnDefinition>
-            <ColumnDefinition Width="0.10*"></ColumnDefinition>
-            <ColumnDefinition Width="0.10*"></ColumnDefinition>
-            <ColumnDefinition Width="0.10*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="45"></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="3*"></RowDefinition>
-            <RowDefinition Height="3*"></RowDefinition>
+            <RowDefinition Height="0.3*"></RowDefinition>
+            <RowDefinition Height="0.6*"></RowDefinition>
+            <RowDefinition Height="0.15*"></RowDefinition>
+            <RowDefinition Height="0.8*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Button Content="Настройки" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="4"></Button>
-        <TextBlock Text="Выбранный город" Grid.Row="1"></TextBlock>
-        <Button Content="Погода" Grid.Row="1" Grid.Column="1"></Button>
-        <Frame Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="8"></Frame>
-        <Image Source="../Images/Sunny.png"  Grid.RowSpan="4" Margin="64,126,251,601" Width="123" Height="123"></Image>
-        <Image Source="../Images/Sunny.png" Grid.RowSpan="4" Margin="95,341,283,449" Width="60" Height="60"></Image>
-        <Image Source="../Images/Cloudy.png" Grid.RowSpan="4" Width="60" Height="60" Margin="95,502,283,302"></Image>
-        <Image Grid.RowSpan="4" Width="60" Height="60" Margin="95,657,283,133">
-            <Image.Source>
-                <BitmapImage UriSource="../Images/Rainy.png"></BitmapImage>
-            </Image.Source>
-        </Image>
-        <Line Grid.RowSpan="4" Y1="187.5" Y2="807.5" Stroke="Black" Margin="125,0,312,0"></Line>
-        <TextBlock Text="Ясно. 21°&#xA;Ощущается как 25°" Grid.RowSpan="4" Margin="194,121,32,0"></TextBlock>
-        <TextBlock Text="Ясно. 21°&#xA;Ощущается как 25°" Grid.RowSpan="4" Margin="167,341,47,0"></TextBlock>
-        <TextBlock Text="Переменная облачность. 20°&#xA;Ощущается как 19°" Margin="167,479,47,0" Grid.RowSpan="4"></TextBlock>
-        <TextBlock Text="Дождь. 19°&#xA;Ощущается как 15°" Grid.RowSpan="4" Margin="167,649,47,0"></TextBlock>
-        <TextBlock Text="16:00" Grid.RowSpan="4" Margin="11,341,343,0"></TextBlock>
-        <TextBlock Text="17:00" Grid.RowSpan="4" Margin="11,492,343,0"></TextBlock>
-        <TextBlock Text="18:00" Grid.RowSpan="4" Margin="11,649,343,0"></TextBlock>
+        <Border Opacity="0.8" Background="#F8C5B4" Margin="0,0,0,30">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="101*"></ColumnDefinition>
+                    <ColumnDefinition Width="18*"></ColumnDefinition>
+                    <ColumnDefinition Width="141*"></ColumnDefinition>
+                    <ColumnDefinition Width="68*"></ColumnDefinition>
+                    <ColumnDefinition Width="68*"></ColumnDefinition>
+                    <ColumnDefinition Width="134*"></ColumnDefinition>
+                    <ColumnDefinition Width="160*"></ColumnDefinition>
+                    <ColumnDefinition Width="134*"></ColumnDefinition>
+                    <ColumnDefinition Width="110*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="21°" Foreground="#3D95B9" TextAlignment="Center" Grid.Column="0"></TextBlock>
+                <Line Grid.Column="1" Stroke="White" Width="2" VerticalAlignment="Stretch" Margin="0,15" Y1="0" Y2="13041"></Line>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Ощущение: &#xA;21°" Grid.Column="2"></TextBlock>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Мин. &#xA;21°" Grid.Column="3"></TextBlock>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Макс. &#xA;21°" Grid.Column="4"></TextBlock>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Давление &#xA;21 мм рт. ст." Grid.Column="5"></TextBlock>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Влажность: &#xA;20%" Grid.Column="6"></TextBlock>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Ветер м/c: &#xA;7м/c" Grid.Column="7"></TextBlock>
+                <TextBlock TextAlignment="Center" Foreground="White" Text="Ветер °: &#xA;290" Grid.Column="8"></TextBlock>
+            </Grid>
+        </Border>
+        <ListView Opacity="0.8" Style="{DynamicResource ListViewStyle}" Margin="0,20" x:Name="lv" Grid.Row="1" ScrollViewer.CanContentScroll="True" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Visible">
+            <ListView.Resources>
+                <Style TargetType="ScrollBar" BasedOn="{StaticResource CustomScrollBarStyle}" />
+            </ListView.Resources>
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+
+            <ListViewItem Content="Item 1" />
+            <ListViewItem Content="Item 2" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+            <ListViewItem Content="Item 3" />
+        </ListView>
+        <Border Opacity="0.8" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" Background="#F8C5B4">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button Content="Температура" HorizontalAlignment="Stretch" Grid.Column="0" Margin="10" Background="#3D95B9"></Button>
+                <Button Content="Ощущается как" HorizontalAlignment="Stretch" Grid.Column="1" Margin="10" Background="#87B6CA"></Button>
+                <Button Content="Давление" HorizontalAlignment="Stretch" Grid.Column="2" Margin="10" Background="#87B6CA"></Button>
+            </Grid>
+        </Border>
     </Grid>
+
 </Window>
